fixed spacing on blocked icon and reverted to cdn for bootstrap due to font issue

--- a/raw_html/css/main.css
+++ b/raw_html/css/main.css
@@ -49,7 +49,11 @@ body {
 .nav a {
     color: black;
     }
-    
+
+.navbar-header {
+    min-height: 75px;
+    }
+
 /* full width nav */
     
 @media (min-width: 926px) {
